<resources>
    <string name="app_name">Grocery</string>
    <string name="grocery">Grocery</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">recover</string>
    <string name="register_user">Register User</string>
    <string name="full_name">Full name</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="complete_address">Complete Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="are_you_seller_register_as_seller">Are you seller? Register as seller</string>
    <string name="register">register</string>
    <string name="register_seller">Register Seller</string>
    <string name="shop_name">Shop Name</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="update">update</string>
    <string name="shop_open">Shop open</string>
    <string name="add_product">Add product</string>
    <string name="product_name">Product name</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="discount_note_eg_10_off">Discount Note eg 10% off</string>
    <string name="quantity_eg_kg_grams">Quantity eg kg grams</string>
    <string name="description">Description</string>
    <string name="product">Products</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="showing_all">showing all</string>
    <string name="edit_product">Edit product</string>
    <string name="shops">Shops</string>
    <string name="closed">Closed</string>
    <string name="shop_details">Shop Details</string>Task :app:checkDebugDuplicateClasses FAILED
    <string name="add_to_cart">Add to cart</string>
    <string name="final_price">Final Price</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="total_price">Total Price</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="remove_item">Remove Item</string>
    <string name="rs">Rs %s</string>
    <string name="delivery">Delivery Fees: Rs%s</string>
    <string name="order_id">Order Id</string>
    <string name="date">Date</string>
    <string name="order_detail">Order Detail</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="rs_400">Rs %s [incl. delivery fee: Rs %s]</string>
    <string name="amount">Amount</string>
    <string name="write_review">Write Review</string>
    <string name="feedback">How was your experience with us? \nYour valuable feedback is important to improve our quality of service.</string>
    <string name="type_review">Type Review…</string>
    <string name="shop_reviews">Shop Reviews</string>
    <string name="order">Order</string>
    <string name="buyer_email">Buyer Name</string>
    <string name="buyer_phone">Buyer Phone</string>
    <string name="order_status">Order Status</string>
    <string name="items">items</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="settings">Settings</string>
    <string name="push_notification">Push Notification</string>
    <string name="title_activity_products">Products</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shop_by_category">Shop by category</string>
    <string name="sub_category">Sub category</string>
    <string name="continue_check_out">Continue Check Out</string>
</resources>