<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".seller.AddProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_rect01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/productImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_cart_purple"
            app:civ_border_color="@color/gray02"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_text"
            android:drawablePadding="5dp"
            android:hint="@string/product_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_text"
            android:drawablePadding="5dp"
            android:hint="@string/description"
            android:padding="10dp" />

        <EditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawablePadding="5dp"
            android:hint="@string/category"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/ic_category" />

        <EditText
            android:id="@+id/subCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawablePadding="5dp"
            android:hint="@string/sub_category"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/ic_category" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawablePadding="5dp"
            android:hint="@string/quantity_eg_kg_grams"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/ic_shopping_cart" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_shopping_cart"
            android:drawablePadding="5dp"
            android:hint="@string/price"
            android:inputType="phone"
            android:padding="10dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dicountSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/discountAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_shopping_cart"
            android:drawablePadding="5dp"
            android:hint="Discount Amount"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/discountPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_shopping_cart"
            android:drawablePadding="5dp"
            android:hint="@string/discount_note_eg_10_off"
            android:padding="10dp" />

        <Button
            android:id="@+id/addProduct"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minWidth="150dp"
            android:text="@string/add_product" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>