<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.EditProfileSellerActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_rect01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/gpsBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:src="@drawable/ic_gps" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/nameSeller"
            tools:text="name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_person_gray"
            app:civ_border_color="@color/gray02"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_person_gray"
            android:drawablePadding="5dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/shopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_shop"
            android:drawablePadding="5dp"
            android:hint="@string/shop_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/deliveryFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_delivery"
            android:drawablePadding="5dp"
            android:hint="@string/delivery_fee"
            android:inputType="number"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/countryEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:textSize="15sp"
                android:hint="@string/country"
                android:padding="10dp" />

            <EditText
                android:id="@+id/stateEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:textSize="15sp"
                android:hint="@string/state"
                android:padding="10dp" />

            <EditText
                android:id="@+id/cityEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:textSize="15sp"
                android:hint="@string/city"
                android:padding="10dp" />
        </LinearLayout>
        <EditText
            android:id="@+id/completeAddressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_gps"
            android:drawablePadding="5dp"
            android:hint="@string/complete_address"
            android:inputType="textPostalAddress"
            android:padding="10dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/shop_open"
            android:id="@+id/shopOpen"/>

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:text="@string/update" />
    </LinearLayout>
    </ScrollView>

</LinearLayout>