<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="300dp"
        android:src="@drawable/login"
        android:gravity="center_horizontal"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:id="@+id/input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEt"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        android:id="@+id/pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEt"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotTv"
        android:text="@string/forgot_password"
        android:layout_marginTop="4dp"
        android:textColor="#3E44F6"
        android:layout_marginStart="275dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:backgroundTint="#F56363"
        android:text="@string/login"
        app:cornerRadius="12dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerTv"
        android:text="@string/not_have_account_register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:textColor="#3E44F6"/>

</LinearLayout>