<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subTotalLabel"
            android:text="@string/sub_total"
            android:padding="8dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sTotalAmt"
            tools:text="Rs 100"
            android:padding="8dp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTotalLabel"
            android:id="@+id/deliveryFeeLabel"
            android:text="@string/delivery_fees"
            android:padding="8dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sTotalAmt"
            android:id="@+id/deliveryFeeAmt"
            android:text="@string/rs"
            android:padding="8dp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deliveryFeeLabel"
            android:id="@+id/totalPriceLabel"
            android:text="@string/total_price"
            android:padding="8dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deliveryFeeAmt"
            android:id="@+id/allTotalPriceTv"
            tools:text="Rs 100"
            android:padding="8dp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/button_color"
            android:text="Check Out"
            android:id="@+id/OkBtn"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>

</RelativeLayout>