<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:text="Order to"
            android:textAllCaps="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/shopName"
            tools:text="Order to"
            android:textAllCaps="true" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray02"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_cart_item"
            android:id="@+id/cartItemRv"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subTotalLabel"
                android:text="@string/sub_total"
                android:padding="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stotalAmt"
                tools:text="Rs 100"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subTotalLabel"
                android:id="@+id/deliveryFeeLabel"
                android:text="@string/delivery_fees"
                android:padding="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stotalAmt"
                android:id="@+id/deliveryFeeAmt"
                android:text="@string/rs"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deliveryFeeLabel"
                android:id="@+id/totalPriceLabel"
                android:text="@string/total_price"
                android:padding="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deliveryFeeAmt"
                android:id="@+id/allTotalPriceTv"
                tools:text="Rs 100"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/confirm"
            android:text="@string/confirm_order"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

</ScrollView>