<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.cart.Carts">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="-8dp"
        android:id="@+id/toolbar"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/button_color">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:text="Cart"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cartRv"
        tools:listitem="@layout/row_cart_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subTotalLabel"
            android:text="@string/sub_total"
            android:padding="8dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sTotalAmt"
            tools:text="Rs 100"
            android:padding="8dp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTotalLabel"
            android:id="@+id/deliveryFeeLabel"
            android:text="@string/delivery_fees"
            android:padding="8dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sTotalAmt"
            android:id="@+id/deliveryFeeAmt"
            android:text="@string/rs"
            android:padding="8dp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deliveryFeeLabel"
            android:id="@+id/totalPriceLabel"
            android:text="@string/total_price"
            android:padding="8dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deliveryFeeAmt"
            android:id="@+id/allTotalPriceTv"
            tools:text="Rs 100"
            android:padding="8dp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmBtn"
        android:layout_margin="8dp"
        app:cornerRadius="12dp"
        android:text="@string/continue_check_out"
        android:backgroundTint="@color/button_color"
        android:minHeight="32dp"/>
</LinearLayout>